<resources>
    <string name="app_name">MovieStage2</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map Location</string>
    <string name="error_message">An error has occcured.  Please try again by clicking REF...</string>
    <string name="movieTitle">Title:</string>
    <string name="empty_view_title_text">The movie shelves are empty...</string>
    <string name="empty_view_subtitle_text">Get started by adding a movie</string>
    <string name="empty_review_title_text">The review shelves are empty...</string>
    <string name="empty_review_subtitle_text">No one has reviewed this movie yet</string>
    <string name="play_trailer">play</string>
    <string name="show_title_here">show title here</string>
    <string name="release_date">Release Date</string>
    <string name="show_date_here">show date here</string>
    <string name="vote_average">Vote average:</string>
    <string name="show_vote_here">show vote here</string>
    <string name="synopsis">Synopsis</string>
    <string name="show_synopsis_here">show synopsis here</string>
    <string name="todo">TODO</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">delete all favorites</string>
    <string name="authorLabel">Author:</string>
    <string name="authorHint">James Pohl</string>
    <string name="contentLabel">Content:</string>
    <string name="Review_btn_text">Show Reviews</string>
    <string name="movie_title_hint">show title here</string>
    <string name="release_date_lable">Release Date:</string>
    <string name="release_date_hint">show date here</string>
    <string name="vote_average_label">Vote Average:</string>
    <string name="vote_average_hint">show vote here</string>
    <string name="synopsis_lable">Synopsis</string>
    <string name="synopsis_hint">show synopsis here</string>
    <string name="movieId_hint">1111111111</string>
    <string name="movieTitle_hint">Gone With The Wind</string>
    <string name="review_content_hint">four score and seven years ago...</string>

    <string-array name="movie_choices">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>Personal Favorites</item>
    </string-array>
</resources>
