<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.moviestage2.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <Button
            android:id="@+id/btnTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Play trailer"/>

            <Button
                android:id="@+id/btnReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Review_btn_text"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="@dimen/posterHeight"
                android:layout_height="@dimen/posterWidth"
                android:layout_weight="1"
                android:theme="@style/MovieStyle"
                app:srcCompat="@mipmap/ic_launcher"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1.60"
                android:text="@string/movieTitle"
                android:textAlignment="viewEnd"
                android:theme="@style/MovieStyle"/>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/movie_title_hint"
                android:theme="@style/MovieStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtReleaseDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/release_date_lable"
                android:textAlignment="viewEnd"
                android:theme="@style/MovieStyle"
                />

            <TextView
                android:id="@+id/txtReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/release_date_hint"
                android:theme="@style/MovieStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleFavorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@drawable/check"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn="" />

            <TextView
                android:id="@+id/txtVoteAverageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/vote_average_label"
                android:textAlignment="viewEnd"
                android:theme="@style/MovieStyle" />

            <TextView
                android:id="@+id/txtVoteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/vote_average_hint"
                android:theme="@style/MovieStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtSynopsisLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/synopsis_lable"
            android:textAlignment="center"
            android:theme="@style/MovieStyle"
            />

        <TextView
            android:id="@+id/txtSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/synopsis_hint"
            android:theme="@style/MovieStyle"/>

    </LinearLayout>
</ScrollView>
